backend/.kubernetes/app/prod/kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: spellbook-prod
  name: spellbook-api
  labels:
    app: spellbook-api
spec:
  selector:
    matchLabels:
      app: spellbook-api
  template:
    metadata:
      labels:
        app: spellbook-api
    spec:
      serviceAccountName: app-service-account
      containers:
        - name: spellbook-api-app
          image: 083767677168.dkr.ecr.us-east-2.amazonaws.com/spellbook-prod-ecr
          resources:
            requests:
              cpu: 256m
              memory: 512M
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
              - name: Host
                value: commanderspellbook.com
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
              - name: Host
                value: commanderspellbook.com
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 10
---
# API Service
apiVersion: v1
kind: Service
metadata:
  name: spellbook-api-service
  namespace: spellbook-prod
  labels:
    app: spellbook-api
    tier: web
spec:
  type: NodePort
  selector:
    app: spellbook-api
  ports:
    - port: 80
      targetPort: 80

---
# Ingress Load Balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spellbook-ingress
  namespace: spellbook-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: project=commanderspellbook,environment=prod
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60,load_balancing.algorithm.type=least_outstanding_requests
    # Defined in scm-infra/templates/commander-spellbook.yaml
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-2:083767677168:regional/webacl/spellbook-prod/e4b7a54e-82ee-4b77-9fa4-518cf8cbd859
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:083767677168:certificate/e6f5834f-bd9a-4333-962a-8fe0857e84ea
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: backend.commanderspellbook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spellbook-api-service
                port:
                  number: 80
    - host: commanderspellbook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spellbook-client-service
                port:
                  number: 80
